# deploy-zscaler-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  temp_update.py  zscaler-mcp-remote-architecture.mermaid
.github/workflows/: pypi-publish.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  preferences.md
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M001/slices/S01/: S01-ASSESSMENT.md  S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S01/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md  T03-SUMMARY.md  T04-SUMMARY.md  T05-SUMMARY.md
.gsd/milestones/M001/slices/S02/: S02-ASSESSMENT.md  S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md  T03-PLAN.md  T03-SUMMARY.md  T04-PLAN.md  T04-SUMMARY.md  T05-PLAN.md  T05-SUMMARY.md
.gsd/milestones/M001/slices/S03/: S03-ASSESSMENT.md  S03-PLAN.md  S03-RESEARCH.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M001/slices/S03/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md  T03-PLAN.md  T03-SUMMARY.md  T04-PLAN.md  T04-SUMMARY.md
.gsd/milestones/M001/slices/S04/: S04-ASSESSMENT.md  S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M001/slices/S04/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md  T03-PLAN.md  T03-SUMMARY.md
.gsd/milestones/M001/slices/S05/: S05-PLAN.md  S05-RESEARCH.md  S05-SUMMARY.md  S05-UAT.md
.gsd/milestones/M001/slices/S05/tasks/: T01-PLAN.md  T02-PLAN.md  T03-PLAN.md
deploy-zscaler-mcp/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
deploy-zscaler-mcp/.github/workflows/: ci.yml  pypi-publish.yml
deploy-zscaler-mcp/src/deploy_zscaler_mcp/: __init__.py  __main__.py  cli.py  commands.py  config.py  deployer.py  server.py  validator.py
deploy-zscaler-mcp/tests/: test_example.py
docs/: COMMANDS.md  TROUBLESHOOTING.md
examples/: deployment-scenarios.md  mcp-config.json
src/zscaler_mcp_deploy/: __init__.py  bootstrap.py  cli.py  deploy.py  errors.py  messages.py  models.py
src/zscaler_mcp_deploy/aws/: __init__.py  bedrock_runtime.py  cloudwatch_verifier.py  iam_bootstrap.py  secrets_manager.py
src/zscaler_mcp_deploy/output/: __init__.py  connection_formatter.py
src/zscaler_mcp_deploy/validators/: __init__.py  aws.py  iam.py  zscaler.py
tests/: test_aws_validation.py  test_bedrock_runtime.py  test_bootstrap.py  test_bootstrap_integration.py  test_cloudwatch_verifier.py  test_connection_formatter.py  test_deploy.py  test_deploy_integration.py  test_errors.py  test_iam.py  test_iam_bootstrap.py  test_preflight.py  test_secrets_manager.py  test_verification_integration.py  test_zscaler.py
